feat: Pay Anything from Any Wallet

--- a/res/values/strings_ar.arb
+++ b/res/values/strings_ar.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "اختر ممثلًا جديدًا",
   "nanogpt_subtitle": "جميع النماذج الأحدث (GPT-4 ، Claude). \\ nno اشتراك ، ادفع مع Crypto.",
   "narrow": "ضيق",
-  "new_tag": "جديد",
   "new_first_wallet_text": "الحفاظ على سلامة التشفير الخاص بك هو قطعة من الكعكة",
   "new_node_testing": "تجربة العقدة الجديدة",
   "new_subaddress_create": "إنشاء",
   "new_subaddress_label_name": "تسمية",
   "new_subaddress_title": "عنوان جديد",
+  "new_tag": "جديد",
   "new_template": "قالب جديد",
   "new_transactions_notifications": "إرسال إشعارات حول المعاملات الجديدة",
   "new_wallet": "إنشاء محفظة جديدة",
@@ -768,6 +768,7 @@
   "seedtype": "البذور",
   "seedtype_alert_content": "مشاركة البذور مع محافظ أخرى ممكن فقط مع BIP39 Seedtype.",
   "seedtype_alert_title": "تنبيه البذور",
+  "select_a_wallet": "حدد محفظة",
   "select_backup_file": "حدد ملف النسخ الاحتياطي",
   "select_buy_provider_notice": "حدد مزود شراء أعلاه. يمكنك تخطي هذه الشاشة عن طريق تعيين مزود شراء الافتراضي في إعدادات التطبيق.",
   "select_destination": ".ﻲﻃﺎﻴﺘﺣﻻ﻿ﺍ ﺦﺴﻨﻟﺍ ﻒﻠﻣ ﺔﻬﺟﻭ ﺪﻳﺪﺤﺗ ءﺎﺟﺮﻟﺍ",
@@ -899,6 +900,7 @@
   "swap": "تبديل",
   "sweeping_wallet": "كنس المحفظة",
   "sweeping_wallet_alert": "لن يستغرق هذا وقتًا طويلاً. لا تترك هذه الشاشة وإلا فقد يتم فقد أموال سويبت",
+  "switch_wallet": "تبديل المحفظة",
   "switchToETHWallet": "ﻯﺮﺧﺃ ﺓﺮﻣ ﺔﻟﻭﺎﺤﻤﻟﺍﻭ Ethereum ﺔﻈﻔﺤﻣ ﻰﻟﺇ ﻞﻳﺪﺒﺘﻟﺍ ﻰﺟﺮﻳ",
   "switchToEVMCompatibleWallet": "  (Ethereum، Polygon) ﻯﺮﺧﺃ ﺓﺮﻣ ﺔﻟﻭﺎﺤﻤﻟﺍﻭ EVM ﻊﻣ ﺔﻘﻓﺍﻮﺘﻣ ﺔﻈﻔﺤﻣ ﻰﻟﺇ ﻞﻳﺪﺒﺘﻟﺍ ﻰﺟﺮﻳ",
   "symbol": "ﺰﻣﺭ",
