--- a/res/values/strings_cs.arb
+++ b/res/values/strings_cs.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "Vyberte nového zástupce",
   "nanogpt_subtitle": "Všechny nejnovější modely (GPT-4, Claude). \\ Nno předplatné, plaťte krypto.",
   "narrow": "Úzký",
-  "new_tag": "Nový",
   "new_first_wallet_text": "Udržování svého kryptového v bezpečí je kus dortu",
   "new_node_testing": "Testování nového uzlu",
   "new_subaddress_create": "Vytvořit",
   "new_subaddress_label_name": "Popisek",
   "new_subaddress_title": "Nová adresa",
+  "new_tag": "Nový",
   "new_template": "Nová šablona",
   "new_transactions_notifications": "Zašlete oznámení o nových transakcích",
   "new_wallet": "Nová peněženka",
@@ -768,6 +768,7 @@
   "seedtype": "SeedType",
   "seedtype_alert_content": "Sdílení semen s jinými peněženkami je možné pouze u BIP39 SeedType.",
   "seedtype_alert_title": "Upozornění seedtype",
+  "select_a_wallet": "Vyberte peněženku",
   "select_backup_file": "Vybrat soubor se zálohou",
   "select_buy_provider_notice": "Vyberte výše uvedeného poskytovatele nákupu. Tuto obrazovku můžete přeskočit nastavením výchozího poskytovatele nákupu v nastavení aplikace.",
   "select_destination": "Vyberte cíl pro záložní soubor.",
@@ -899,6 +900,7 @@
   "swap": "Swap",
   "sweeping_wallet": "Zametací peněženka",
   "sweeping_wallet_alert": "To by nemělo trvat dlouho. Nenechávejte tuto obrazovku, jinak mohou být ztraceny prostředky.",
+  "switch_wallet": "Přepněte peněženku",
   "switchToETHWallet": "Přejděte na peněženku Ethereum a zkuste to znovu",
   "switchToEVMCompatibleWallet": "Přepněte na peněženku kompatibilní s EVM a zkuste to znovu (Ethereum, Polygon)",
   "symbol": "Symbol",
