--- a/res/values/strings_de.arb
+++ b/res/values/strings_de.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "Wählen Sie einen neuen Vertreter aus",
   "nanogpt_subtitle": "Alle neuesten Modelle (GPT-4, Claude).",
   "narrow": "Eng",
-  "new_tag": "Neu",
   "new_first_wallet_text": "Wenn Sie Ihren Krypto schützen, ist ein Kinderspiel",
   "new_node_testing": "Neuen Knoten testen",
   "new_subaddress_create": "Erstellen",
   "new_subaddress_label_name": "Bezeichnung",
   "new_subaddress_title": "Neue Adresse",
+  "new_tag": "Neu",
   "new_template": "neue Vorlage",
   "new_transactions_notifications": "Senden Sie Benachrichtigungen über neue Transaktionen",
   "new_wallet": "Neue Wallet",
@@ -769,6 +769,7 @@
   "seedtype": "Seedtyp",
   "seedtype_alert_content": "Das Teilen von Seeds mit anderen Wallet ist nur mit bip39 Seedype möglich.",
   "seedtype_alert_title": "Seedype-Alarm",
+  "select_a_wallet": "Wählen Sie eine Brieftasche",
   "select_backup_file": "Sicherungsdatei auswählen",
   "select_buy_provider_notice": "Wählen Sie oben einen Anbieter kaufen. Sie können diese Seite überspringen, indem Sie Ihren Standard-Kaufanbieter in den App-Einstellungen festlegen.",
   "select_destination": "Bitte wählen Sie das Ziel für die Sicherungsdatei aus.",
@@ -900,6 +901,7 @@
   "swap": "Tauschen",
   "sweeping_wallet": "Wallet leeren",
   "sweeping_wallet_alert": "Das sollte nicht lange dauern. VERLASSEN SIE DIESEN BILDSCHIRM NICHT, ANDERNFALLS KÖNNEN DIE GELDER VERLOREN GEHEN",
+  "switch_wallet": "Brieftasche schalten",
   "switchToETHWallet": "Bitte wechseln Sie zu einem Ethereum-Wallet und versuchen Sie es erneut",
   "switchToEVMCompatibleWallet": "Bitte wechseln Sie zu einem EVM-kompatiblen Wallet und versuchen Sie es erneut (Ethereum, Polygon)",
   "symbol": "Symbol",
