--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "Pick a new representative",
   "nanogpt_subtitle": "All the newest models (GPT-4, Claude).\\nNo subscription, pay with crypto.",
   "narrow": "Narrow",
-  "new_tag": "New",
   "new_first_wallet_text": "Keeping your crypto safe is a piece of cake",
   "new_node_testing": "New node testing",
   "new_subaddress_create": "Create",
   "new_subaddress_label_name": "Label name",
   "new_subaddress_title": "New address",
+  "new_tag": "New",
   "new_template": "New Template",
   "new_transactions_notifications": "Send notifications about new transactions",
   "new_wallet": "New Wallet",
@@ -769,6 +769,7 @@
   "seedtype": "Seedtype",
   "seedtype_alert_content": "Sharing seeds with other wallets is only possible with BIP39 SeedType.",
   "seedtype_alert_title": "SeedType Alert",
+  "select_a_wallet": "Select a wallet",
   "select_backup_file": "Select backup file",
   "select_buy_provider_notice": "Select a buy provider above. You can skip this screen by setting your default buy provider in app settings.",
   "select_destination": "Please select destination for the backup file.",
@@ -900,6 +901,7 @@
   "swap": "Swap",
   "sweeping_wallet": "Sweeping wallet",
   "sweeping_wallet_alert": "This shouldn’t take long. DO NOT LEAVE THIS SCREEN OR THE SWEPT FUNDS MAY BE LOST.",
+  "switch_wallet": "Switch Wallet",
   "switchToETHWallet": "Please switch to an Ethereum wallet and try again",
   "switchToEVMCompatibleWallet": "Please switch to an EVM compatible wallet and try again (Ethereum, Polygon)",
   "symbol": "Symbol",
