--- a/res/values/strings_fr.arb
+++ b/res/values/strings_fr.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "Choisissez un nouveau représentant",
   "nanogpt_subtitle": "Tous les modèles les plus récents (GPT-4, Claude).\nPas d'abonnement, payez avec vos crypto-monnaies.",
   "narrow": "Rédruit",
-  "new_tag": "Nouveau",
   "new_first_wallet_text": "Garder vos crypto-monnaies en sécurité est un jeu d'enfant.",
   "new_node_testing": "Test du nouveau nœud",
   "new_subaddress_create": "Créer",
   "new_subaddress_label_name": "Nom",
   "new_subaddress_title": "Nouvelle adresse",
+  "new_tag": "Nouveau",
   "new_template": "Nouveau Modèle",
   "new_transactions_notifications": "Envoyer des notifications sur les nouvelles transactions",
   "new_wallet": "Nouveau Portefeuille (Wallet)",
@@ -768,6 +768,7 @@
   "seedtype": "Type de graine",
   "seedtype_alert_content": "Le partage de graines avec d'autres portefeuilles n'est possible qu'avec le type de graine BIP39.",
   "seedtype_alert_title": "Alerte Type de Graine",
+  "select_a_wallet": "Sélectionnez un portefeuille",
   "select_backup_file": "Sélectionnez le fichier de sauvegarde",
   "select_buy_provider_notice": "Sélectionnez un fournisseur d'achat ci-dessus. Vous pouvez ignorer cet écran en définissant votre fournisseur d'achat par défaut dans les paramètres de l'application.",
   "select_destination": "Veuillez sélectionner la destination du fichier de sauvegarde.",
@@ -899,6 +900,7 @@
   "swap": "Échanger",
   "sweeping_wallet": "Portefeuille (wallet) de consolidation",
   "sweeping_wallet_alert": "Cela ne devrait pas prendre longtemps. NE QUITTEZ PAS CET ÉCRAN OU LES FONDS TRANSFÉRÉS POURRAIENT ÊTRE PERDUS.",
+  "switch_wallet": "Portefeuille de commutation",
   "switchToETHWallet": "Veuillez passer à un portefeuille (wallet) Ethereum et réessayer",
   "switchToEVMCompatibleWallet": "Veuillez passer à un portefeuille compatible EVM et réessayer (Ethereum, Polygon)",
   "symbol": "Symbole",
