--- a/res/values/strings_ha.arb
+++ b/res/values/strings_ha.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "Dauki sabon wakili",
   "nanogpt_subtitle": "Duk sabbin samfuran (GPT-4, CLODE). \\ NNO biyan kuɗi, biya tare da crypto.",
   "narrow": "kunkuntar",
-  "new_tag": "Sabo",
   "new_first_wallet_text": "Tsayawa kayatar da lafiya",
   "new_node_testing": "Sabbin gwajin kumburi",
   "new_subaddress_create": "Ƙirƙiri",
   "new_subaddress_label_name": "Lakabin suna",
   "new_subaddress_title": "Adireshin sabuwa",
+  "new_tag": "Sabo",
   "new_template": "Sabon Samfura",
   "new_transactions_notifications": "Aika sanarwa game da sababbin ma'amaloli",
   "new_wallet": "Sabuwar Wallet",
@@ -770,6 +770,7 @@
   "seedtype": "Seedtype",
   "seedtype_alert_content": "Raba tsaba tare da sauran wallets yana yiwuwa ne kawai tare da Bip39 seedtype.",
   "seedtype_alert_title": "Seedtype farke",
+  "select_a_wallet": "Zaɓi Wallet",
   "select_backup_file": "Zaɓi fayil ɗin madadin",
   "select_buy_provider_notice": "Zaɓi mai ba da kyauta a sama. Zaka iya tsallake wannan allon ta hanyar saita mai ba da isasshen busasshen mai ba da isasshen busasshiyar saiti.",
   "select_destination": "Da fatan za a zaɓi wurin da za a yi wa madadin fayil ɗin.",
@@ -901,6 +902,7 @@
   "swap": "Musya",
   "sweeping_wallet": "Kashi na kasa",
   "sweeping_wallet_alert": "Wannan ba zai samu lokacin mai tsaski. KADA KA SAMU KUNGIYARAN KUHON, ZAMAN DADIN BANKUNCI ZAI HAŘA",
+  "switch_wallet": "Zanen rubutu",
   "switchToETHWallet": "Da fatan za a canza zuwa walat ɗin Ethereum kuma a sake gwadawa",
   "switchToEVMCompatibleWallet": "Da fatan za a canza zuwa walat ɗin EVM mai jituwa kuma a sake gwadawa (Ethereum, Polygon)",
   "symbol": "Alama",
