--- a/res/values/strings_hi.arb
+++ b/res/values/strings_hi.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "एक नया प्रतिनिधि चुनें",
   "nanogpt_subtitle": "सभी नवीनतम मॉडल (GPT-4, क्लाउड)। \\ nno सदस्यता, क्रिप्टो के साथ भुगतान करें।",
   "narrow": "सँकरा",
-  "new_tag": "नया",
   "new_first_wallet_text": "अपने क्रिप्टो को सुरक्षित रखना केक का एक टुकड़ा है",
   "new_node_testing": "नई नोड परीक्षण",
   "new_subaddress_create": "सर्जन करना",
   "new_subaddress_label_name": "लेबल का नाम",
   "new_subaddress_title": "नया पता",
+  "new_tag": "नया",
   "new_template": "नया टेम्पलेट",
   "new_transactions_notifications": "नए लेनदेन के बारे में सूचनाएं भेजें",
   "new_wallet": "नया बटुआ",
@@ -770,6 +770,7 @@
   "seedtype": "बीज",
   "seedtype_alert_content": "अन्य पर्स के साथ बीज साझा करना केवल BIP39 सीडटाइप के साथ संभव है।",
   "seedtype_alert_title": "बीजगणित अलर्ट",
+  "select_a_wallet": "एक वॉलेट का चयन करें",
   "select_backup_file": "बैकअप फ़ाइल का चयन करें",
   "select_buy_provider_notice": "ऊपर एक खरीद प्रदाता का चयन करें। आप इस स्क्रीन को ऐप सेटिंग्स में अपना डिफ़ॉल्ट बाय प्रदाता सेट करके छोड़ सकते हैं।",
   "select_destination": "कृपया बैकअप फ़ाइल के लिए गंतव्य का चयन करें।",
@@ -901,6 +902,7 @@
   "swap": "बदलना",
   "sweeping_wallet": "स्वीपिंग वॉलेट",
   "sweeping_wallet_alert": "इसमें अधिक समय नहीं लगना चाहिए। इस स्क्रीन को न छोड़ें या स्वैप्ट फंड खो सकते हैं",
+  "switch_wallet": "स्विच वॉलेट",
   "switchToETHWallet": "कृपया एथेरियम वॉलेट पर स्विच करें और पुनः प्रयास करें",
   "switchToEVMCompatibleWallet": "कृपया ईवीएम संगत वॉलेट पर स्विच करें और पुनः प्रयास करें (एथेरियम, पॉलीगॉन)",
   "symbol": "प्रतीक",
