--- a/res/values/strings_hr.arb
+++ b/res/values/strings_hr.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "Odaberite novog predstavnika",
   "nanogpt_subtitle": "Svi najnoviji modeli (GPT-4, Claude). \\ NNO pretplata, plaćajte kripto.",
   "narrow": "Usko",
-  "new_tag": "Novi",
   "new_first_wallet_text": "Čuvanje kriptovaluta je komad torte",
   "new_node_testing": "Provjera novog nodea",
   "new_subaddress_create": "Izradi",
   "new_subaddress_label_name": "Oznaka",
   "new_subaddress_title": "Nova adresa",
+  "new_tag": "Novi",
   "new_template": "novi predložak",
   "new_transactions_notifications": "Pošaljite obavijesti o novim transakcijama",
   "new_wallet": "Novi novčanik",
@@ -768,6 +768,7 @@
   "seedtype": "Sjemenska vrsta",
   "seedtype_alert_content": "Dijeljenje sjemena s drugim novčanicima moguće je samo s BIP39 sjemenom.",
   "seedtype_alert_title": "Upozorenje o sjemenu",
+  "select_a_wallet": "Odaberite novčanik",
   "select_backup_file": "Odaberite datoteku sigurnosne kopije",
   "select_buy_provider_notice": "Odaberite gornji davatelj kupnje. Ovaj zaslon možete preskočiti postavljanjem zadanog davatelja usluga kupnje u postavkama aplikacija.",
   "select_destination": "Odaberite odredište za datoteku sigurnosne kopije.",
@@ -899,6 +900,7 @@
   "swap": "Mijenjati",
   "sweeping_wallet": "Čisti novčanik",
   "sweeping_wallet_alert": "Ovo ne bi trebalo dugo trajati. NE NAPUŠTAJTE OVAJ ZASLON INAČE SE POBREŠENA SREDSTVA MOGU IZGUBITI",
+  "switch_wallet": "PRIKLJUČAK WALINE",
   "switchToETHWallet": "Prijeđite na Ethereum novčanik i pokušajte ponovno",
   "switchToEVMCompatibleWallet": "Prijeđite na novčanik kompatibilan s EVM-om i pokušajte ponovno (Ethereum, Polygon)",
   "symbol": "Simbol",
