--- a/res/values/strings_hy.arb
+++ b/res/values/strings_hy.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "Ընտրեք նոր ներկայացուցիչ",
   "nanogpt_subtitle": "Բոլոր ամենանոր մոդելներ (GPT-4, Claude).\\nԱռանց բաժանորդագրության, վճարեք կրիպտոարժույթով",
   "narrow": "Նեղ",
-  "new_tag": "Նոր",
   "new_first_wallet_text": "Ձեր ծպտյալ անվտանգ պահելը տորթի մի կտոր է",
   "new_node_testing": "Նոր հանգույցի փորձարկում",
   "new_subaddress_create": "Ստեղծել",
   "new_subaddress_label_name": "Պիտակի անուն",
   "new_subaddress_title": "Նոր հասցե",
+  "new_tag": "Նոր",
   "new_template": "Նոր նմուշ",
   "new_transactions_notifications": "Ուղարկեք ծանուցումներ նոր գործարքների վերաբերյալ",
   "new_wallet": "Նոր դրամապանակ",
@@ -767,6 +767,7 @@
   "seedtype": "Սերմի տեսակ",
   "seedtype_alert_content": "Այլ դրամապանակներով սերմերի փոխանակումը հնարավոր է միայն BIP39 SEEDTYPE- ով:",
   "seedtype_alert_title": "SEEDTYPE ALERT",
+  "select_a_wallet": "Ընտրեք դրամապանակ",
   "select_backup_file": "Ընտրել կրկնօրինակ ֆայլ",
   "select_buy_provider_notice": "Ընտրեք գնման մատակարարը վերևում։ Դուք կարող եք բաց թողնել այս էկրանը ձեր լռելայն գնման մատակարարը հավելվածի կարգավորումներում սահմանելով",
   "select_destination": "Խնդրում ենք ընտրել կրկնօրինակ ֆայլի նպատակակետը",
@@ -897,6 +898,7 @@
   "swap": "Փոխանակել",
   "sweeping_wallet": "Դրամապանակը մաքրվում է",
   "sweeping_wallet_alert": "Սա չի տևի երկար։ Խնդրում ենք չլքել այս էկրանը կամ մաքրված միջոցները կկորչեն։",
+  "switch_wallet": "Անջատեք դրամապանակը",
   "switchToETHWallet": "Խնդրում ենք անցնել Ethereum դրամապանակ և փորձել կրկին",
   "switchToEVMCompatibleWallet": "Խնդրում ենք անցնել EVM համատեղելի դրամապանակ և փորձել կրկին (Ethereum, Polygon)",
   "symbol": "Նշան",
