--- a/res/values/strings_id.arb
+++ b/res/values/strings_id.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "Pilih perwakilan baru",
   "nanogpt_subtitle": "Semua model terbaru (GPT-4, Claude). \\ Nno langganan, bayar dengan crypto.",
   "narrow": "Sempit",
-  "new_tag": "Baru",
   "new_first_wallet_text": "Menjaga crypto Anda aman adalah sepotong kue",
   "new_node_testing": "Pengujian node baru",
   "new_subaddress_create": "Buat",
   "new_subaddress_label_name": "Nama label",
   "new_subaddress_title": "Alamat baru",
+  "new_tag": "Baru",
   "new_template": "Template Baru",
   "new_transactions_notifications": "Kirim pemberitahuan tentang transaksi baru",
   "new_wallet": "Dompet Baru",
@@ -771,6 +771,7 @@
   "seedtype": "Seedtype",
   "seedtype_alert_content": "Berbagi biji dengan dompet lain hanya dimungkinkan dengan BIP39 seedtype.",
   "seedtype_alert_title": "Peringatan seedtype",
+  "select_a_wallet": "Pilih dompet",
   "select_backup_file": "Pilih file cadangan",
   "select_buy_provider_notice": "Pilih penyedia beli di atas. Anda dapat melewatkan layar ini dengan mengatur penyedia pembelian default Anda di pengaturan aplikasi.",
   "select_destination": "Silakan pilih tujuan untuk file cadangan.",
@@ -902,6 +903,7 @@
   "swap": "Menukar",
   "sweeping_wallet": "Dompet menyapu",
   "sweeping_wallet_alert": "Ini seharusnya tidak memakan waktu lama. Jangan tinggalkan layar ini atau dana swept mungkin hilang.",
+  "switch_wallet": "Switch Wallet",
   "switchToETHWallet": "Silakan beralih ke dompet Ethereum dan coba lagi",
   "switchToEVMCompatibleWallet": "Silakan beralih ke dompet yang kompatibel dengan EVM dan coba lagi (Ethereum, Polygon)",
   "symbol": "Simbol",
