--- a/res/values/strings_it.arb
+++ b/res/values/strings_it.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "Scegli un nuovo rappresentante",
   "nanogpt_subtitle": "Tutti i modelli più recenti (GPT-4, Claude). Nessun abbonamento, paga con cripto.",
   "narrow": "Stretto",
-  "new_tag": "Nuovo",
   "new_first_wallet_text": "Mantenere la tua criptovaluta è un gioco da ragazzi",
   "new_node_testing": "Test novo nodo",
   "new_subaddress_create": "Crea",
   "new_subaddress_label_name": "Nome etichetta",
   "new_subaddress_title": "Nuovo indirizzo",
+  "new_tag": "Nuovo",
   "new_template": "Nuovo modello",
   "new_transactions_notifications": "Invia notifiche su nuove transazioni",
   "new_wallet": "Nuovo portafoglio",
@@ -769,6 +769,7 @@
   "seedtype": "Seedtype",
   "seedtype_alert_content": "La condivisione di semi con altri portafogli è possibile solo con Bip39 SeedType.",
   "seedtype_alert_title": "Avviso seedType",
+  "select_a_wallet": "Seleziona un portafoglio",
   "select_backup_file": "Seleziona file di backup",
   "select_buy_provider_notice": "Seleziona un provider di acquisto sopra. È possibile saltare questa schermata impostando il provider di acquisto predefinito nelle impostazioni dell'app.",
   "select_destination": "Seleziona la destinazione per il file di backup.",
@@ -900,6 +901,7 @@
   "swap": "Scambio",
   "sweeping_wallet": "Svuota portafoglio",
   "sweeping_wallet_alert": "Questo non dovrebbe richiedere molto tempo. NON LASCIARE QUESTA SCHERMATA O I FONDI DA TRASFERIRE POTREBBERO ANDARE PERSI",
+  "switch_wallet": "Switch Porthet",
   "switchToETHWallet": "Passa a un portafoglio Ethereum e riprova",
   "switchToEVMCompatibleWallet": "Passa a un portafoglio compatibile con EVM e riprova (Ethereum, Polygon)",
   "symbol": "Simbolo",
