--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "새 대표자 선택",
   "nanogpt_subtitle": "모든 최신 모델 (GPT-4, Claude).\n구독 없이 암호화폐로 결제.",
   "narrow": "좁게",
-  "new_tag": "새로운",
   "new_first_wallet_text": "암호화폐를 안전하게 보관하는 것은 식은 죽 먹기",
   "new_node_testing": "새 노드 테스트 중",
   "new_subaddress_create": "생성",
   "new_subaddress_label_name": "라벨 이름",
   "new_subaddress_title": "새 주소",
+  "new_tag": "새로운",
   "new_template": "새 템플릿",
   "new_transactions_notifications": "새 트랜잭션 알림 보내기",
   "new_wallet": "새 지갑",
@@ -769,6 +769,7 @@
   "seedtype": "시드 유형",
   "seedtype_alert_content": "다른 지갑과의 시드 공유는 BIP39 시드 유형에서만 가능합니다.",
   "seedtype_alert_title": "시드 유형 알림",
+  "select_a_wallet": "지갑을 선택하십시오",
   "select_backup_file": "백업 파일 선택",
   "select_buy_provider_notice": "위에서 구매 제공 업체를 선택하세요. 앱 설정에서 기본 구매 제공 업체를 설정하여 이 화면을 건너뛸 수 있습니다.",
   "select_destination": "백업 파일의 대상을 선택하세요.",
@@ -900,6 +901,7 @@
   "swap": "스왑",
   "sweeping_wallet": "지갑 스윕 중",
   "sweeping_wallet_alert": "오래 걸리지 않습니다. 이 화면을 떠나거나 스윕된 자금을 잃을 수 있습니다.",
+  "switch_wallet": "스위치 지갑",
   "switchToETHWallet": "이더리움 지갑으로 전환하고 다시 시도하세요",
   "switchToEVMCompatibleWallet": "EVM 호환 지갑(이더리움, 폴리곤)으로 전환하고 다시 시도하세요",
   "symbol": "심볼",
