--- a/res/values/strings_my.arb
+++ b/res/values/strings_my.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "အသစ်တစ်ခုကိုရွေးပါ",
   "nanogpt_subtitle": "အားလုံးနောက်ဆုံးပေါ်မော်ဒယ်များ (GPT-4, Claude) ။ \\ nno subscription, crypto နှင့်အတူပေးဆောင်။",
   "narrow": "ကျဉ်းသော",
-  "new_tag": "သစ်သော",
   "new_first_wallet_text": "သင်၏ Crypto Safe ကိုလုံခြုံအောင်ပြုလုပ်ခြင်းသည်ကိတ်မုန့်တစ်မျိုးဖြစ်သည်",
   "new_node_testing": "နှာခေါင်း အသစ်စမ်းသပ်ခြင်း။",
   "new_subaddress_create": "ဖန်တီးပါ။",
   "new_subaddress_label_name": "အညွှန်းအမည်",
   "new_subaddress_title": "လိပ်စာအသစ်",
+  "new_tag": "သစ်သော",
   "new_template": "ပုံစံအသစ်",
   "new_transactions_notifications": "အသစ်သောအရောင်းအဝယ်အကြောင်းသတိပေးချက်များပေးပို့ပါ",
   "new_wallet": "ပိုက်ဆံအိတ်အသစ်",
@@ -768,6 +768,7 @@
   "seedtype": "မျိုးပွားခြင်း",
   "seedtype_alert_content": "အခြားပိုက်ဆံအိတ်များနှင့်မျိုးစေ့များကိုမျှဝေခြင်းသည် BIP39 sebyspe ဖြင့်သာဖြစ်သည်။",
   "seedtype_alert_title": "ပျိုးပင်သတိပေးချက်",
+  "select_a_wallet": "ပိုက်ဆံအိတ်တစ်ခုရွေးပါ",
   "select_backup_file": "အရန်ဖိုင်ကို ရွေးပါ။",
   "select_buy_provider_notice": "အပေါ်ကဝယ်သူတစ် ဦး ကိုရွေးချယ်ပါ။ သင်၏ default 0 ယ်သူအား app settings တွင် setting လုပ်ခြင်းဖြင့်ဤ screen ကိုကျော်သွားနိုင်သည်။",
   "select_destination": "အရန်ဖိုင်အတွက် ဦးတည်ရာကို ရွေးပါ။",
@@ -899,6 +900,7 @@
   "swap": "လဲလှယ်",
   "sweeping_wallet": "ိုက်ဆံအိတ် တံမြက်လှည်း",
   "sweeping_wallet_alert": "ဒါက ကြာကြာမခံသင့်ပါဘူး။ ဤစခရင်ကို ချန်မထားပါနှင့် သို့မဟုတ် ထုတ်ယူထားသော ရန်ပုံငွေများ ဆုံးရှုံးနိုင်သည်",
+  "switch_wallet": "Wallet switch",
   "switchToETHWallet": "ကျေးဇူးပြု၍ Ethereum ပိုက်ဆံအိတ်သို့ ပြောင်းပြီး ထပ်စမ်းကြည့်ပါ။",
   "switchToEVMCompatibleWallet": "ကျေးဇူးပြု၍ EVM တွဲဖက်သုံးနိုင်သော ပိုက်ဆံအိတ်သို့ ပြောင်းပြီး ထပ်စမ်းကြည့်ပါ (Ethereum၊ Polygon)",
   "symbol": "သင်္ကေတ",
