--- a/res/values/strings_nl.arb
+++ b/res/values/strings_nl.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "Kies een nieuwe vertegenwoordiger",
   "nanogpt_subtitle": "Alle nieuwste modellen (GPT-4, Claude). \\ Nno-abonnement, betalen met crypto.",
   "narrow": "Smal",
-  "new_tag": "Nieuw",
   "new_first_wallet_text": "Je crypto veilig houden is een fluitje van een cent",
   "new_node_testing": "Nieuwe knooppunttest",
   "new_subaddress_create": "Creëren",
   "new_subaddress_label_name": "Label naam",
   "new_subaddress_title": "Nieuw adres",
+  "new_tag": "Nieuw",
   "new_template": "Nieuwe sjabloon",
   "new_transactions_notifications": "Stuur meldingen over nieuwe transacties",
   "new_wallet": "Nieuwe portemonnee",
@@ -768,6 +768,7 @@
   "seedtype": "Zaadtype",
   "seedtype_alert_content": "Het delen van zaden met andere portefeuilles is alleen mogelijk met BIP39 SeedType.",
   "seedtype_alert_title": "Zaadtype alert",
+  "select_a_wallet": "Selecteer een portemonnee",
   "select_backup_file": "Selecteer een back-upbestand",
   "select_buy_provider_notice": "Selecteer hierboven een koopprovider. U kunt dit scherm overslaan door uw standaard kopenprovider in te stellen in app -instellingen.",
   "select_destination": "Selecteer de bestemming voor het back-upbestand.",
@@ -899,6 +900,7 @@
   "swap": "Ruil",
   "sweeping_wallet": "Vegende portemonnee",
   "sweeping_wallet_alert": "Dit duurt niet lang. VERLAAT DIT SCHERM NIET, ANDERS KAN HET SWEPT-GELD VERLOREN WORDEN",
+  "switch_wallet": "Schakel portemonnee",
   "switchToETHWallet": "Schakel over naar een Ethereum-portemonnee en probeer het opnieuw",
   "switchToEVMCompatibleWallet": "Schakel over naar een EVM-compatibele portemonnee en probeer het opnieuw (Ethereum, Polygon)",
   "symbol": "Symbool",
