--- a/res/values/strings_pt.arb
+++ b/res/values/strings_pt.arb
@@ -523,12 +523,12 @@
   "nano_pick_new_rep": "Escolha um novo representante",
   "nanogpt_subtitle": "Todos os modelos mais recentes (GPT-4, Claude). \\nSem assinatura, pague com criptomoeda.",
   "narrow": "Estreito",
-  "new_tag": "Novo",
   "new_first_wallet_text": "Manter sua cripto segura é um pedaço de bolo",
   "new_node_testing": "Teste de novo nó",
   "new_subaddress_create": "Criar",
   "new_subaddress_label_name": "Nome",
   "new_subaddress_title": "Novo endereço",
+  "new_tag": "Novo",
   "new_template": "Novo modelo",
   "new_transactions_notifications": "Envie notificações sobre novas transações",
   "new_wallet": "Nova carteira",
@@ -770,6 +770,7 @@
   "seedtype": "SeedType",
   "seedtype_alert_content": "Compartilhar sementes com outras carteiras só é possível com o BIP39 SeedType.",
   "seedtype_alert_title": "Alerta de SeedType",
+  "select_a_wallet": "Selecione uma carteira",
   "select_backup_file": "Selecione o arquivo de backup",
   "select_buy_provider_notice": "Selecione um provedor de compra acima. Você pode pular esta tela definindo seu provedor de compra padrão nas configurações de aplicativos.",
   "select_destination": "Selecione o destino para o arquivo de backup.",
@@ -901,6 +902,7 @@
   "swap": "Trocar",
   "sweeping_wallet": "Carteira varrendo",
   "sweeping_wallet_alert": "To nie powinno zająć dużo czasu. NIE WYCHODŹ Z TEGO EKRANU, W PRZECIWNYM WYPADKU MOŻE ZOSTAĆ UTRACONA ŚRODKI",
+  "switch_wallet": "CALLETA DE CURSÃO",
   "switchToETHWallet": "Mude para uma carteira Ethereum e tente novamente",
   "switchToEVMCompatibleWallet": "Mude para uma carteira compatível com EVM e tente novamente (Ethereum, Polygon)",
   "symbol": "Símbolo",
