--- a/res/values/strings_ru.arb
+++ b/res/values/strings_ru.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "Выберите нового представителя",
   "nanogpt_subtitle": "Все новейшие модели (GPT-4, Claude). \\ Nno Подписка, платите с крипто.",
   "narrow": "Узкий",
-  "new_tag": "Новый",
   "new_first_wallet_text": "Сохранение вашего криптографии - это кусок торта",
   "new_node_testing": "Тестирование новой ноды",
   "new_subaddress_create": "Создать",
   "new_subaddress_label_name": "Имя",
   "new_subaddress_title": "Новый адрес",
+  "new_tag": "Новый",
   "new_template": "Новый шаблон",
   "new_transactions_notifications": "Отправить уведомления о новых транзакциях",
   "new_wallet": "Новый кошелёк",
@@ -769,6 +769,7 @@
   "seedtype": "SEEDTYPE",
   "seedtype_alert_content": "Обмен семенами с другими кошельками возможно только с BIP39 SeedType.",
   "seedtype_alert_title": "SEEDTYPE ALERT",
+  "select_a_wallet": "Выберите кошелек",
   "select_backup_file": "Выберите файл резервной копии",
   "select_buy_provider_notice": "Выберите поставщика покупки выше. Вы можете пропустить этот экран, установив поставщика покупки по умолчанию в настройках приложения.",
   "select_destination": "Пожалуйста, выберите место для файла резервной копии.",
@@ -900,6 +901,7 @@
   "swap": "Менять",
   "sweeping_wallet": "Подметание кошелька",
   "sweeping_wallet_alert": "Это не должно занять много времени. НЕ ПОКИДАЙТЕ ЭТОТ ЭКРАН, ИНАЧЕ ВЫЧИСЛЕННЫЕ СРЕДСТВА МОГУТ БЫТЬ ПОТЕРЯНЫ",
+  "switch_wallet": "Переключить кошелек",
   "switchToETHWallet": "Пожалуйста, переключитесь на кошелек Ethereum и повторите попытку.",
   "switchToEVMCompatibleWallet": "Пожалуйста, переключитесь на кошелек, совместимый с EVM, и повторите попытку (Ethereum, Polygon).",
   "symbol": "Символ",
