--- a/res/values/strings_tr.arb
+++ b/res/values/strings_tr.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "Yeni bir temsilci seçin",
   "nanogpt_subtitle": "En yeni modeller (GPT-4, Claude). \\ Nno aboneliği, kripto ile ödeme yapın.",
   "narrow": "Dar",
-  "new_tag": "Yeni",
   "new_first_wallet_text": "Kripto'nuzu güvende tutmak bir parça kek",
   "new_node_testing": "Yeni düğüm test ediliyor",
   "new_subaddress_create": "Oluştur",
   "new_subaddress_label_name": "Etiket ismi",
   "new_subaddress_title": "Yeni adres",
+  "new_tag": "Yeni",
   "new_template": "Yeni Şablon",
   "new_transactions_notifications": "Yeni işlemler hakkında bildirimler gönderin",
   "new_wallet": "Yeni Cüzdan",
@@ -768,6 +768,7 @@
   "seedtype": "Tohum",
   "seedtype_alert_content": "Tohumları diğer cüzdanlarla paylaşmak sadece BIP39 tohumu ile mümkündür.",
   "seedtype_alert_title": "SeedType uyarısı",
+  "select_a_wallet": "Bir Cüzdan Seçin",
   "select_backup_file": "Yedek dosyası seç",
   "select_buy_provider_notice": "Yukarıda bir satın alma sağlayıcısı seçin. App ayarlarında varsayılan satın alma sağlayıcınızı ayarlayarak bu ekranı atlayabilirsiniz.",
   "select_destination": "Lütfen yedekleme dosyası için hedef seçin.",
@@ -899,6 +900,7 @@
   "swap": "Takas",
   "sweeping_wallet": "Süpürme cüzdanı",
   "sweeping_wallet_alert": "Bu uzun sürmemeli. BU EKRANDAN BIRAKMAYIN YOKSA SÜPÜRÜLEN FONLAR KAYBOLABİLİR",
+  "switch_wallet": "Cüzdan",
   "switchToETHWallet": "Lütfen bir Ethereum cüzdanına geçin ve tekrar deneyin",
   "switchToEVMCompatibleWallet": "Lütfen EVM uyumlu bir cüzdana geçin ve tekrar deneyin (Ethereum, Polygon)",
   "symbol": "Sembol",
