--- a/res/values/strings_ur.arb
+++ b/res/values/strings_ur.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "ایک نیا نمائندہ منتخب کریں",
   "nanogpt_subtitle": "تمام تازہ ترین ماڈل (GPT-4 ، کلاڈ)۔ n n no سبسکرپشن ، کریپٹو کے ساتھ ادائیگی کریں۔",
   "narrow": "تنگ",
-  "new_tag": "نیا",
   "new_first_wallet_text": "اپنے کریپٹو کو محفوظ رکھنا کیک کا ایک ٹکڑا ہے",
   "new_node_testing": "نیا نوڈ ٹیسٹنگ",
   "new_subaddress_create": "بنانا",
   "new_subaddress_label_name": "لیبل کا نام",
   "new_subaddress_title": "نیا پتہ",
+  "new_tag": "نیا",
   "new_template": "نیا سانچہ",
   "new_transactions_notifications": "نئے لین دین کے بارے میں اطلاعات بھیجیں",
   "new_wallet": "نیا پرس",
@@ -770,6 +770,7 @@
   "seedtype": "سیڈ ٹائپ",
   "seedtype_alert_content": "دوسرے بٹوے کے ساتھ بیجوں کا اشتراک صرف BIP39 بیج ٹائپ کے ساتھ ہی ممکن ہے۔",
   "seedtype_alert_title": "سیڈ ٹائپ الرٹ",
+  "select_a_wallet": "ایک پرس منتخب کریں",
   "select_backup_file": "بیک اپ فائل کو منتخب کریں۔",
   "select_buy_provider_notice": "اوپر خریدنے والا خریدنے والا منتخب کریں۔ آپ ایپ کی ترتیبات میں اپنے پہلے سے طے شدہ خریدنے والے کو ترتیب دے کر اس اسکرین کو چھوڑ سکتے ہیں۔",
   "select_destination": "۔ﮟﯾﺮﮐ ﺏﺎﺨﺘﻧﺍ ﺎﮐ ﻝﺰﻨﻣ ﮯﯿﻟ ﮯﮐ ﻞﺋﺎﻓ ﭖﺍ ﮏﯿﺑ ﻡﺮﮐ ﮦﺍﺮﺑ",
@@ -901,6 +902,7 @@
   "swap": "تبادلہ",
   "sweeping_wallet": "جھاڑو دینے والا پرس",
   "sweeping_wallet_alert": "اس میں زیادہ وقت نہیں لینا چاہئے۔ اس اسکرین کو مت چھوڑیں یا بہہ جانے والے فنڈز ضائع ہوسکتے ہیں۔",
+  "switch_wallet": "سوئچ پرس",
   "switchToETHWallet": "۔ﮟﯾﺮﮐ ﺶﺷﻮﮐ ﮦﺭﺎﺑﻭﺩ ﺭﻭﺍ ﮟﯾﺮﮐ ﭻﺋﻮﺳ ﺮﭘ ﭧﯿﻟﺍﻭ Ethereum ﻡﺮﮐ ﮦﺍﺮﺑ",
   "switchToEVMCompatibleWallet": "(Ethereum, Polygon) ﮟﯾﺮﮐ ﺶﺷﻮﮐ ﮦﺭﺎﺑﻭﺩ ﺭﻭﺍ ﮟﯾﺮﮐ ﭻﺋﻮﺳ ﺮﭘ ﭧﯿﻟﺍﻭ ﮯﻟﺍﻭ ﮯﻨﮭﮐﺭ ﺖﻘﺑﺎﻄﻣ ",
   "symbol": "ﺖﻣﻼ﻿ﻋ",
