--- a/res/values/strings_yo.arb
+++ b/res/values/strings_yo.arb
@@ -523,12 +523,12 @@
   "nano_pick_new_rep": "Mu aṣoju tuntun kan",
   "nanogpt_subtitle": "Gbogbo awọn awoṣe tuntun (GPT-4, Claude). \\ Nno alabapin kan, sanwo pẹlu Crypto.",
   "narrow": "Taara",
-  "new_tag": "Tuntun",
   "new_first_wallet_text": "Tọju ẹrọ ti o ni aabo rẹ jẹ nkan ti akara oyinbo kan",
   "new_node_testing": "A ń dán apẹka títun wò",
   "new_subaddress_create": "Ṣe é",
   "new_subaddress_label_name": "Orúkọ",
   "new_subaddress_title": "Àdírẹ́sì títun",
+  "new_tag": "Tuntun",
   "new_template": "Àwòṣe títun",
   "new_transactions_notifications": "Firanṣẹ awọn iwifunni nipa awọn iṣowo tuntun",
   "new_wallet": "Àpamọ́wọ́ títun",
@@ -769,6 +769,7 @@
   "seedtype": "Irugbin-seetypu",
   "seedtype_alert_content": "Pinpin awọn irugbin pẹlu awọn gedo miiran ṣee ṣe pẹlu Bip39 irugbin.",
   "seedtype_alert_title": "Ṣajọpọ Seeytype",
+  "select_a_wallet": "Yan apamọwọ kan",
   "select_backup_file": "Select backup file",
   "select_buy_provider_notice": "Yan olupese Ra loke. O le skii iboju yii nipa ṣiṣeto olupese rẹ ni awọn eto App.",
   "select_destination": "Jọwọ yan ibi ti o nlo fun faili afẹyinti.",
@@ -900,6 +901,7 @@
   "swap": "Eepo",
   "sweeping_wallet": "Fi owo iwe iwe wofo",
   "sweeping_wallet_alert": "Yio kọja pada si ikan yii. Kì yoo daadaa leede yii tabi owo ti o ti fi se iwe iwe naa yoo gbe.",
+  "switch_wallet": "Yipada apamọwọ",
   "switchToETHWallet": "Jọwọ yipada si apamọwọ Ethereum ki o tun gbiyanju lẹẹkansi",
   "switchToEVMCompatibleWallet": "Jọwọ yipada si apamọwọ ibaramu EVM ki o tun gbiyanju lẹẹkansi (Ethereum, Polygon)",
   "symbol": "Aami",
