--- a/res/values/strings_es.arb
+++ b/res/values/strings_es.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "Elija un nuevo representante",
   "nanogpt_subtitle": "Todos los modelos más nuevos (GPT-4, Claude). \\nSin suscripción, pague con cripto.",
   "narrow": "Angosto",
-  "new_tag": "Nuevo",
   "new_first_wallet_text": "Mantener su criptografía a salvo es un pedazo de pastel",
   "new_node_testing": "Prueba nuevos nodos",
   "new_subaddress_create": "Crear",
   "new_subaddress_label_name": "Nombre de etiqueta",
   "new_subaddress_title": "Nueva direccion",
+  "new_tag": "Nuevo",
   "new_template": "Nueva plantilla",
   "new_transactions_notifications": "Enviar notificaciones sobre nuevas transacciones",
   "new_wallet": "Nueva billetera",
@@ -769,6 +769,7 @@
   "seedtype": "Tipos de semillas",
   "seedtype_alert_content": "Compartir semillas con otras billeteras solo es posible con semillas bip39 - un tipo específico de semilla.",
   "seedtype_alert_title": "Alerta de tipo de semillas",
+  "select_a_wallet": "Seleccione una billetera",
   "select_backup_file": "Seleccionar archivo de respaldo",
   "select_buy_provider_notice": "Selecciona un proveedor de compra arriba. Puede omitir esta pantalla configurando su proveedor de compra predeterminado en la configuración de la aplicación.",
   "select_destination": "Selecciona el destino del archivo de copia de seguridad.",
@@ -900,6 +901,7 @@
   "swap": "Intercambio",
   "sweeping_wallet": "Barrer billetera (gastar todos los fondos disponibles)",
   "sweeping_wallet_alert": "Esto no debería llevar mucho tiempo. NO DEJES ESTA PANTALLA O SE PUEDEN PERDER LOS FONDOS BARRIDOS",
+  "switch_wallet": "Billetera",
   "switchToETHWallet": "Cambia a una billetera Ethereum e inténtelo nuevamente.",
   "switchToEVMCompatibleWallet": "Cambia a una billetera compatible con EVM e inténtelo nuevamente (Ethereum, Polygon)",
   "symbol": "Símbolo",
