--- a/res/values/strings_ja.arb
+++ b/res/values/strings_ja.arb
@@ -523,12 +523,12 @@
   "nano_pick_new_rep": "新しい代表者を選びます",
   "nanogpt_subtitle": "すべての最新モデル（GPT-4、Claude）。\\ nnoサブスクリプション、暗号で支払います。",
   "narrow": "狭い",
-  "new_tag": "新しい",
   "new_first_wallet_text": "暗号を安全に保つことはケーキです",
   "new_node_testing": "新しいノードのテスト",
   "new_subaddress_create": "作成する",
   "new_subaddress_label_name": "ラベル名",
   "new_subaddress_title": "新しいアドレス",
+  "new_tag": "新しい",
   "new_template": "新しいテンプレート",
   "new_transactions_notifications": "新しいトランザクションに関する通知を送信します",
   "new_wallet": "新しいウォレット",
@@ -769,6 +769,7 @@
   "seedtype": "SeedType",
   "seedtype_alert_content": "他の財布と種子を共有することは、BIP39 SeedTypeでのみ可能です。",
   "seedtype_alert_title": "SeedTypeアラート",
+  "select_a_wallet": "ウォレットを選択します",
   "select_backup_file": "バックアップファイルを選択",
   "select_buy_provider_notice": "上記の購入プロバイダーを選択してください。デフォルトの購入プロバイダーをアプリ設定で設定して、この画面をスキップできます。",
   "select_destination": "バックアップファイルの保存先を選択してください。",
@@ -900,6 +901,7 @@
   "swap": "スワップ",
   "sweeping_wallet": "スイープウォレット",
   "sweeping_wallet_alert": "これには時間がかかりません。この画面から離れないでください。そうしないと、スイープ ファンドが失われる可能性があります",
+  "switch_wallet": "スイッチウォレット",
   "switchToETHWallet": "イーサリアムウォレットに切り替えてもう一度お試しください",
   "switchToEVMCompatibleWallet": "EVM 互換のウォレットに切り替えて再試行してください (イーサリアム、ポリゴン)",
   "symbol": "シンボル",
