--- a/res/values/strings_pl.arb
+++ b/res/values/strings_pl.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "Wybierz nowego przedstawiciela",
   "nanogpt_subtitle": "Wszystkie najnowsze modele (GPT-4, Claude). \\ Nno subskrypcja, płacą za pomocą kryptografii.",
   "narrow": "Wąski",
-  "new_tag": "Nowy",
   "new_first_wallet_text": "Zachowanie bezpieczeństwa kryptograficznego jest kawałkiem ciasta",
   "new_node_testing": "Testowanie nowych węzłów",
   "new_subaddress_create": "Stwórz",
   "new_subaddress_label_name": "Etykieta nazwy adresu",
   "new_subaddress_title": "Nowy adres",
+  "new_tag": "Nowy",
   "new_template": "Nowy szablon",
   "new_transactions_notifications": "Wyślij powiadomienia o nowych transakcjach",
   "new_wallet": "Nowy portfel",
@@ -768,6 +768,7 @@
   "seedtype": "Sedtype",
   "seedtype_alert_content": "Dzielenie się nasionami z innymi portfelami jest możliwe tylko z BIP39 sededType.",
   "seedtype_alert_title": "Ustanowienie typu sedype",
+  "select_a_wallet": "Wybierz portfel",
   "select_backup_file": "Wybierz plik kopii zapasowej",
   "select_buy_provider_notice": "Wybierz powyższe dostawcę zakupu. Możesz pominąć ten ekran, ustawiając domyślnego dostawcę zakupu w ustawieniach aplikacji.",
   "select_destination": "Wybierz miejsce docelowe dla pliku kopii zapasowej.",
@@ -899,6 +900,7 @@
   "swap": "Wymiana",
   "sweeping_wallet": "Zamiatanie portfela",
   "sweeping_wallet_alert": "To nie powinno zająć dużo czasu. NIE WYCHODŹ Z TEGO EKRANU, W PRZECIWNYM WYPADKU MOŻE ZOSTAĆ UTRACONA ŚRODKI",
+  "switch_wallet": "Portfel przełącz",
   "switchToETHWallet": "Przejdź na portfel Ethereum i spróbuj ponownie",
   "switchToEVMCompatibleWallet": "Przejdź na portfel zgodny z EVM i spróbuj ponownie (Ethereum, Polygon)",
   "symbol": "Symbol",
