--- a/res/values/strings_uk.arb
+++ b/res/values/strings_uk.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "Виберіть нового представника",
   "nanogpt_subtitle": "Усі найновіші моделі (GPT-4, Claude). \\ Nno підписка, оплата криптовалютою.",
   "narrow": "вузькі",
-  "new_tag": "Новачок",
   "new_first_wallet_text": "Зберігання вашої криптовалюти це просто як шматок торта",
   "new_node_testing": "Тестування нового вузла",
   "new_subaddress_create": "Створити",
   "new_subaddress_label_name": "Ім'я",
   "new_subaddress_title": "Нова адреса",
+  "new_tag": "Новачок",
   "new_template": "Новий шаблон",
   "new_transactions_notifications": "Надішліть сповіщення про нові транзакції",
   "new_wallet": "Новий гаманець",
@@ -769,6 +769,7 @@
   "seedtype": "Насіннєвий тип",
   "seedtype_alert_content": "Спільний доступ до інших гаманців можливе лише за допомогою BIP39 Seedtype.",
   "seedtype_alert_title": "Попередження насінника",
+  "select_a_wallet": "Виберіть гаманець",
   "select_backup_file": "Виберіть файл резервної копії",
   "select_buy_provider_notice": "Виберіть постачальника купівлі вище. Ви можете пропустити цей екран, встановивши свого постачальника купівлі за замовчуванням у налаштуваннях додатків.",
   "select_destination": "Виберіть місце призначення для файлу резервної копії.",
@@ -900,6 +901,7 @@
   "swap": "Обміняти",
   "sweeping_wallet": "Підмітаня гаманця",
   "sweeping_wallet_alert": "Це не повинно зайняти багато часу. НЕ ЗАЛИШАЙТЕ ЦЬОГО ЕКРАНУ, АБО КОШТИ МОЖУТЬ БУТИ ВТРАЧЕНІ",
+  "switch_wallet": "Перемикач гаманця",
   "switchToETHWallet": "Перейдіть на гаманець Ethereum і повторіть спробу",
   "switchToEVMCompatibleWallet": "Перейдіть на гаманець, сумісний з EVM, і повторіть спробу (Ethereum, Polygon)",
   "symbol": "символ",
