--- a/res/values/strings_zh.arb
+++ b/res/values/strings_zh.arb
@@ -522,12 +522,12 @@
   "nano_pick_new_rep": "选择新代表",
   "nanogpt_subtitle": "所有最新型号（GPT-4，Claude）。\\ nno订阅，用加密货币付款。",
   "narrow": "狭窄的",
-  "new_tag": "新的",
   "new_first_wallet_text": "保持加密货币是一件小菜一碟",
   "new_node_testing": "新节点测试",
   "new_subaddress_create": "创建",
   "new_subaddress_label_name": "标签名称",
   "new_subaddress_title": "新地址",
+  "new_tag": "新的",
   "new_template": "新模板",
   "new_transactions_notifications": "发送有关新交易的通知",
   "new_wallet": "新钱包",
@@ -768,6 +768,7 @@
   "seedtype": "籽粒",
   "seedtype_alert_content": "只有BIP39籽粒可以与其他钱包共享种子。",
   "seedtype_alert_title": "籽粒警报",
+  "select_a_wallet": "选择一个钱包",
   "select_backup_file": "选择备份文件",
   "select_buy_provider_notice": "在上面选择买入提供商。您可以通过在应用程序设置中设置默认的购买提供商来跳过此屏幕。",
   "select_destination": "请选择备份文件的目的地。",
@@ -899,6 +900,7 @@
   "swap": "交换",
   "sweeping_wallet": "扫一扫钱包",
   "sweeping_wallet_alert": "\n这应该不会花很长时间。请勿离开此屏幕，否则可能会丢失所掠取的资金",
+  "switch_wallet": "开关钱包",
   "switchToETHWallet": "请切换到以太坊钱包并重试",
   "switchToEVMCompatibleWallet": "请切换到 EVM 兼容钱包并重试（以太坊、Polygon）",
   "symbol": "象征",
